--- a/GSPtrakOCR/GSPtrakOCR.csproj
+++ b/GSPtrakOCR/GSPtrakOCR.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="IronOcr" Version="2023.6.6" />
     <PackageReference Include="PInvoke.Windows.Core" Version="0.7.124" />
     <PackageReference Include="System.Drawing.Common" Version="7.0.0" />
+    <FrameworkReference Include="Microsoft.WindowsDesktop.App" />
   </ItemGroup>
 
 </Project>
